tests/NormalTests/paczka1/fuzzy1/12674135.err
Error in line 7: bQm A117 382,1
Error in line 8: bQm A125 60,5
Error in line 14: bQm A975 24,9
Error in line 31: A117 A975 4,8
